boinc (7.0.34+dfsg-6) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Fixing upstream bug 
    https://boinc.berkeley.edu/trac/ticket/1168
    on dir_scan usage.

  [ Guo Yixuan ]
  * Updated debian/copyright.

 -- Steffen Moeller <moeller@debian.org>  Sun, 02 Sep 2012 11:04:19 +0200

boinc (7.0.34+dfsg-5) UNRELEASED; urgency=low

  * Added better error messages for opendir() failures

 -- Steffen Moeller <moeller@debian.org>  Sat, 01 Sep 2012 15:13:26 +0200

boinc (7.0.34+dfsg-4) unstable; urgency=low

  [ Guo Yixuan ]
  * Fix of debian/patch on pathlength
  [ Steffen Moeller ]
  * Corrected handling of memory reallocation in client/stream.cpp
  * Improved cpptest cleanliness

 -- Steffen Moeller <moeller@debian.org>  Sat, 01 Sep 2012 15:13:26 +0200

boinc (7.0.34+dfsg-3) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Improving error message on directory that cannot be opened
  * Fixing a file descriptor leak in read_ppm_file (api/gutil.cpp)

  [ Guo Yixuan ]
  * Removed dependency on dh-buildinfo, no longer used.
  * Fixed a bug in our patches that truncated filename.

 -- Steffen Moeller <moeller@debian.org>  Sun, 26 Aug 2012 18:20:13 +0200

boinc (7.0.34+dfsg-2) unstable; urgency=low

  [ Steffen Moeller ]
  * Reacting to ftpmasters' comments
    - libraries get package name adjusted to soname
    - boinc-nvidia-cuda package loses dependency on libcuda1:i386

  [ Guo Yixuan ]
  * Change libboinc-app-dev's depends to be binnmuable, to resolve lintian
    errors.
  * Revert dpkg-dev's version in build-deps to >= 1.16.1.1.
  * Add libboinc7 and libboinc-app7 to boinc-dbg's depends.
  * Add lintian overrides for boinc-manager and libboinc-app7, because -O0 are
    used in api/ and clientgui/, where fortify won't work.

 -- Steffen Moeller <moeller@debian.org>  Thu, 23 Aug 2012 23:58:26 +0200

boinc (7.0.34+dfsg-1) unstable; urgency=low

  [ Steffen Moeller ]
  * New upstream version
    - many non-Linux fixes
    - consistency with GPU types