@@ -7,6 +7,7 @@ boinc (7.0.34+dfsg-6) UNRELEASED; urgency=low
 
   [ Guo Yixuan ]
   * Updated debian/copyright.
+  * Clean up debian/rules.
 
  -- Steffen Moeller <moeller@debian.org>  Sun, 02 Sep 2012 11:04:19 +0200
 
